--- a/website/content/en/releases/14.1R/schedule.adoc
+++ b/website/content/en/releases/14.1R/schedule.adoc
@@ -32,9 +32,9 @@ General discussions about the pending release and known issues should be sent to
 |Action |Expected |Actual |Description
 |Initial release schedule announcement |- |20 December 2023 |Release Engineers send announcement email to developers with a rough schedule.
 |Release schedule reminder |8 April 2024 |8 April 2024 |Release Engineers send reminder announcement e-mail to developers with updated schedule.
-|Code slush begins |19 April 2024 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
-|{localBranchReleng} branch |3 May 2024 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
-|BETA1 builds begin |3 May 2024 |- |First beta test snapshot.
+|Code slush begins |19 April 2024 |19 April 2024 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|{localBranchReleng} branch |3 May 2024 |3 May 2024 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |3 May 2024 |3 May 2024 |First beta test snapshot.
 |BETA2 builds begin |10 May 2024 |- |Second beta test snapshot.
 |BETA3 builds begin |17 May 2024 |- |Third beta test snapshot.
 |RC1 builds begin |24 May 2024 |- |First release candidate.
