ja/handbook: Fix warnings
Many issues were due to a wrongly unterminated example block.

--- a/documentation/content/ja/books/handbook/disks/_index.adoc
+++ b/documentation/content/ja/books/handbook/disks/_index.adoc
@@ -64,7 +64,7 @@ endif::[]
 * フロッピーディスクにバックアップする方法
 * スナップショットとは何か、そしてそれを効果的に使用する方法
 
-[[disks-naming]]
+[[disk-naming]]
 == デバイス名
 
 以下は、FreeBSD で対応している物理記憶デバイスとそれに対応するデバイス名のリストです。
