Status/2024Q1/bhyve.adoc: Fixes
PR:		278772
Differential Revision:	https://reviews.freebsd.org/D45093

--- a/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
@@ -4,7 +4,7 @@ Links: +
 link:https://callfortesting.org/[bhyve production users calls] URL: link:https://callfortesting.org[]
 link:https://wiki.freebsd.org/EnterpriseWorkingGroup[FreeBSD Wiki - Enterprise Working Group] URL: link:https://wiki.freebsd.org/EnterpriseWorkingGroup[] +
 link:https://wiki.freebsd.org/ChrisMoerz/bhyve_management[FreeBSD Wiki - EWG - bhyve and jails management tooling] URL: link:https://wiki.freebsd.org/ChrisMoerz/bhyve_management[] +
-link:http://static.bultmann.eu/s6-talk/#(1)[Jan Bramkamp's work on s6rc] URL:http://static.bultmann.eu/s6-talk/#(1)[] +
+link:http://static.bultmann.eu/s6-talk/#(1)[Jan Bramkamp's work on s6rc] URL: link:http://static.bultmann.eu/s6-talk/[] +
 link:https://github.com/christian-moerz/vmstated[vmstated on GitHub] URL: link:https://github.com/christian-moerz/vmstated[] +
 link:https://www.youtube.com/watch?v=f60NCrunXyw[YouTube - vmstated explained] URL: link:https://www.youtube.com/watch?v=f60NCrunXyw[]
 
@@ -46,7 +46,7 @@ First steps were taken by experimenting with existing frameworks (i.e. s6rc work
 Started as an experiment to better understand the problem space of process supervision and virtual machine state handling, vmstated is constructed of a daemon and vmstatedctl management utility.
 It is built with base-only tooling and libraries and leverages FreeBSD specific constructs like kqueue to minimize its resource impact.
 
-vmstated is configured via a UCL configuration file (similar to [.filename]#jails.conf#) and -- in combination with a man:bhyve_config|5] configuration file -- already provides highest flexibility in configuring virtual machines.
+vmstated is configured via a UCL configuration file (similar to [.filename]#jails.conf#) and -- in combination with a man:bhyve_config[5] configuration file -- already provides highest flexibility in configuring virtual machines.
 vmstatedctl provides a jail-like command set to start, stop, and retrieve status information about guests.
 State transitions can easily be hooked via shell scripts and allow running additional commands for network or storage set up and tear down when relevant state changes occur.
 
@@ -61,7 +61,7 @@ If you want to know more about our work, come join us at one of Michael Dexter's
 We managed to update a few parts of the Handbook and Porter's Handbook (thanks to mailto:emaste@FreeBSD.org[Ed Maste], mailto:jrm@FreeBSD.org[Joseph Mingrone], mailto:pauamma@gundo.com[Pau Amma], and mailto:rgrimes@FreeBSD.org[Rodney W. Grimes]):
 
 * several improvements and expansions to the virtualization chapter in the FreeBSD Handbook
-** using a man:bhyve_config|5] configuration file
+** using a man:bhyve_config[5] configuration file
 ** jailing bhyve
 ** experimental snapshot and restore feature
 ** setting up a Windows guest
