Status/2024Q1/bhyve.adoc: Add missing new line

--- a/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
@@ -1,7 +1,7 @@
 === Bhyve Improvements
 
 Links: +
-link:https://callfortesting.org/[bhyve production users calls] URL: link:https://callfortesting.org[]
+link:https://callfortesting.org/[bhyve production users calls] URL: link:https://callfortesting.org[] +
 link:https://wiki.freebsd.org/EnterpriseWorkingGroup[FreeBSD Wiki - Enterprise Working Group] URL: link:https://wiki.freebsd.org/EnterpriseWorkingGroup[] +
 link:https://wiki.freebsd.org/ChrisMoerz/bhyve_management[FreeBSD Wiki - EWG - bhyve and jails management tooling] URL: link:https://wiki.freebsd.org/ChrisMoerz/bhyve_management[] +
 link:http://static.bultmann.eu/s6-talk/#(1)[Jan Bramkamp's work on s6rc] URL: link:http://static.bultmann.eu/s6-talk/[] +
