status: 2024q1: core: corrections, suggestions

--- a/website/content/en/status/report-2024-01-2024-03/core.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/core.adoc
@@ -12,12 +12,11 @@ The release announcement is at:
 
 link:https://www.freebsd.org/releases/13.3R/announce/[]
 
-Along the release engineering team, the project dedicates the 13.3-RELEASE to Glen Barber, with thanks for his many years of contributions as Release Engineer.
+Along with the Release Engineering team, the Project dedicates 13.3-RELEASE to Glen Barber, with thanks for his many years of contributions as Release Engineer.
 
 ==== Future of 32-bit platform support
 
-Core announced link:https://lists.freebsd.org/archives/freebsd-announce/2024-February/000117.html[Future of 32-bit platform support in FreeBSD] for deprecating 32-bit platforms over the next couple of major
-releases.
+Core announced link:https://lists.freebsd.org/archives/freebsd-announce/2024-February/000117.html[Future of 32-bit platform support in FreeBSD] for deprecating 32-bit platforms over the next couple of major releases.
 
 ==== Commit bits
 
