handbook/virtualization: add note on workaround for Parallels
A user reported high CPU utilization on a fresh install of 14.0
on Parallels (MacOS, M1/Apple Silicon).  Disabling the new ACPI
ged(4) device worked around the problem.  Document this (for now).

Reviewed by:	pauamma_gundo.com
Differential Revision:	https://reviews.freebsd.org/D45103

--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -136,6 +136,13 @@ kern.hz=100
 +
 Without this setting, an idle FreeBSD Parallels guest will use roughly 15% of the CPU of a single processor iMac(R).
 After this change the usage will be closer to 5%.
++
+If installing FreeBSD 14.0 or later, and CPU utilization is still high, add the following additional line to [.filename]#/boot/loader.conf#:
++
+[.programlisting]
+....
+debug.acpi.disabled="ged"
+....
 . Create a New Kernel Configuration File
 +
 All of the SCSI, FireWire, and USB device drivers can be removed from a custom kernel configuration file.
