phb: modernize some python bits
PR:	https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=276796

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1692,7 +1692,7 @@ If Python is only needed at build time, run time or for the tests, it can be set
 If Python is also needed during the patch phase, use `patch`.
 See crossref:special[using-python, Using Python] for more information.
 
-`PYTHON_NO_DEPENDS=yes` can be used when the variables exported by the framework are needed but a dependency on Python is not.
+`USES=python:env` can be used when the variables exported by the framework are needed but a dependency on Python is not.
 It can happen when using with <<uses-shebangfix,`USES=shebangfix`>>, and the goal is only to fix the shebangs but not add a dependency on Python.
 
 [[uses-qmail]]
@@ -1929,7 +1929,7 @@ Correct paths for supported interpreters are available in `_interp__CMD`.
 
 [TIP]
 ====
-When used with <<uses-python,`USES=python`>>, and the aim is only to fix the shebangs but a dependency on Python itself is not wanted, use `PYTHON_NO_DEPENDS=yes`.
+When used with <<uses-python,`USES=python`>>, and the aim is only to fix the shebangs but a dependency on Python itself is not wanted, use `USES=python:env` instead.
 ====
 
 [[uses-shebangfix-ex-lua]]
