--- a/documentation/content/en/books/porters-handbook/uses/_index.po
+++ b/documentation/content/en/books/porters-handbook/uses/_index.po
@@ -4715,7 +4715,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/uses/_index.adoc:1695
 msgid ""
-"`PYTHON_NO_DEPENDS=yes` can be used when the variables exported by the "
+"`USES=python:env` can be used when the variables exported by the "
 "framework are needed but a dependency on Python is not.  It can happen when "
 "using with <<uses-shebangfix,`USES=shebangfix`>>, and the goal is only to "
 "fix the shebangs but not add a dependency on Python."
@@ -5242,7 +5242,7 @@ msgstr ""
 msgid ""
 "When used with <<uses-python,`USES=python`>>, and the aim is only to fix the "
 "shebangs but a dependency on Python itself is not wanted, use "
-"`PYTHON_NO_DEPENDS=yes`."
+"`USES=python:env` instead."
 msgstr ""
 
 #. type: Block title
