--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,7 +37,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: INCLUDE
+:beta-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -82,6 +82,18 @@
 // fully complete yet.  I plan to followup on this and expand it
 // more (in addition to cleaning up this file) following the 11.3
 // release (likely as part of the 11.3 announcement commit). -gjb
+
+:rel141-current-major: 14
+:rel141-current: 14.1
+:rel141-current-date: June 18, 2024
+
+:u-rel141-notes: https://www.FreeBSD.org/releases/{rel141-current}R/relnotes/
+:u-rel141-announce: https://www.FreeBSD.org/releases/{rel141-current}R/announce/
+:u-rel141-errata: https://www.FreeBSD.org/releases/{rel141-current}R/errata/
+:u-rel141-hardware: https://www.FreeBSD.org/releases/{rel141-current}R/hardware/
+:u-rel141-installation: https://www.FreeBSD.org/releases/{rel141-current}R/installation/
+:u-rel141-readme: https://www.FreeBSD.org/releases/{rel141-current}R/readme/
+:u-rel141-signatures: https://www.FreeBSD.org/releases/{rel141-current}R/signatures/
 
 :rel140-current-major: 14
 :rel140-current: 14.0
