--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -115,8 +115,8 @@ This section covers changes and additions to userland applications, contributed 
 === Userland Configuration Changes
 
 By default, changes shown in email by the man:periodic[8] facility from the `daily` scripts show less context than before to reduce the size of the output.
-The behavior can be controlled by the `daily_diff_flags` variable in man:rc.conf[5].
-Similarly, the changes shown by the security scripts show less context than previously, controlled by the `security_status_diff_flags` variable in man:rc.conf[5].
+The behavior can be controlled by the `daily_diff_flags` variable in man:periodic.conf[5].
+Similarly, the changes shown by the security scripts show less context than previously, controlled by the `security_status_diff_flags` variable in man:periodic.conf[5].
 gitref:538994626b9f[repository=src], gitref:37dc394170a5[repository=src], gitref:128e78ffb084[repository=src]
 
 [[userland-programs]]
@@ -141,12 +141,16 @@ The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-20
 gitref:58ae50f31e95[repository=src]
 
 The man:usbconfig[8] utility now reads the descriptions of usb vendor and products from [.filename]#/usr/share/misc/usb_vendors# when available, similar to what man:pciconf[8] does.
+gitref:7b9a772f9f64[repository=src]
 
 [[userland-contrib]]
 === Contributed Software
 
 One True Awk (man:awk[1]) has been updated to 2nd Edition, with new -csv support and UTF-8 support.
-gitref:7b9a772f9f64[repository=src]
+gitref:daf917daba9c[repository=src]
+
+Clang/LLVM have been upgraded to version 18.1.5.
+gitref:90a5e985e5f4[repository=src]
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -158,6 +162,12 @@ The man:setusercontext[3] routine in `libutil` will now set the process priority
 The priority can now have the value `inherit`, indicating that the priority should be unchanged from that of the parent process.
 Similarly, the umask can have the value `inherit`.
 gitref:6f6186e19fe5[repository=src], gitref:a8c273b3c97f[repository=src], gitref:d2d66fedc418[repository=src] (Sponsored by Kumacom SAS)
+
+Many string and memory operations in the C library now use SIMD (single instruction multiple data) extensions for improved performance when available on amd64 systems; see man:simd[7].
+(Sponsored by The FreeBSD Foundation)
+
+There is now a much better implementation of the 128-bit `tgammal` function in the math library, man:math[3], on platforms that support it.
+gitref:8df6c930c151[repository=src]
 
 [[kernel]]
 == Kernel
@@ -203,6 +213,11 @@ New man:sysctl[8] variables have been added under `kern.rpc.unenc` and `kern.rpc
 A large number of failed handshakes might indicate an NFS confirguration problem.
 gitref:b8e137d8d32d[repository=src]
 
+[[storage-zfs]]
+=== ZFS
+
+OpenZFS has been upgraded to version 2.2.4.
+gitref:78c9d8f1ce65[repository=src]
 
 [[boot]]
 == Boot Loader Changes
