--- a/website/content/en/projects/summerofcode.adoc
+++ b/website/content/en/projects/summerofcode.adoc
@@ -6,7 +6,7 @@ sidenav: developers
 Google Summer of Code or GSoC is an annual event sponsored by Google, Inc.
 It enables contributors to spend from 8 to 22 weeks over the summer "interning" with open source software projects.
 The work is done under the guidance of one or more mentors and the effort is rewarded with https://developers.google.com/open-source/gsoc/help/student-stipends[a stipend].
-FreeBSD has been a participating organization every year since 2005 and we hope to be awarded a spot as mentoring organization again in 2024.
+FreeBSD has been a participating organization every year since 2005 and was again awarded a spot as a mentoring organization in 2024 with https://wiki.FreeBSD.org/SummerOfCode2024Projects[eleven projects].
 
 If you are interested in operating system development, "interning" with a longstanding and successful open source operating system like FreeBSD is an excellent opportunity.
 Founded in 1993, FreeBSD is an advanced operating system for server, desktop, and embedded computer platforms.
@@ -50,6 +50,7 @@ Contributors are also welcome, and are indeed encouraged, to propose your own id
 
 For inspiration, you can have look at the contributor projects from previous years.
 
+* https://wiki.FreeBSD.org/SummerOfCode2024Projects[Summer of Code 2024 FreeBSD Projects Wiki]
 * https://wiki.FreeBSD.org/SummerOfCode2023Projects[Summer of Code 2023 FreeBSD Projects Wiki]
 * https://wiki.FreeBSD.org/SummerOfCode2022Projects[Summer of Code 2022 FreeBSD Projects Wiki]
 * https://wiki.FreeBSD.org/SummerOfCode2021Projects[Summer of Code 2021 FreeBSD Projects Wiki]
