[handbook][linuxemu]: Mention Rocky Linux 9 userland
And add note about c7 deprecation

PR:			281837
Reviewed by:		0mp@
Differential Revision: https://reviews.freebsd.org/D47017

--- a/documentation/content/en/books/handbook/linuxemu/_index.adoc
+++ b/documentation/content/en/books/handbook/linuxemu/_index.adoc
@@ -125,8 +125,56 @@ For example, to install Sublime Text 4, along with all the Linux libraries it de
 ....
 ====
 
-[[linuxemu-packages]]
+[[linuxemu-rockylinux]]
+=== Rocky Linux Base System from FreeBSD Packages
+
+To install the Rocky Linux 9 userland execute the following command:
+
+[source,shell]
+....
+# pkg install linux_base-rl9
+....
+
+package:emulators/linux_rl9[] will place the base system derived from Rocky Linux 9 into [.filename]#/compat/linux#.
+
+After installing the package, the contents of [.filename]#/compat/linux# can be verified by running the following command to check that the Rocky Linux userland has been installed:
+
+[source,shell]
+....
+# ls -l /compat/linux/
+....
+
+The output should be similar to the following:
+
+[.programlisting]
+....
+total 36
+drwxr-xr-x   2 root wheel  512 Oct  9 17:28 afs
+lrwxr-xr-x   1 root wheel    7 May 16  2022 bin -> usr/bin
+drwxr-xr-x   3 root wheel  512 Oct  9 17:28 dev
+drwxr-xr-x  24 root wheel 1536 Oct  9 17:28 etc
+lrwxr-xr-x   1 root wheel    7 May 16  2022 lib -> usr/lib
+lrwxr-xr-x   1 root wheel    9 May 16  2022 lib64 -> usr/lib64
+drwxr-xr-x   2 root wheel  512 Oct  9 17:28 opt
+drwxr-xr-x   2 root wheel  512 Oct  9 17:28 proc
+lrwxr-xr-x   1 root wheel    8 Oct  1 03:11 run -> /var/run
+lrwxr-xr-x   1 root wheel    8 May 16  2022 sbin -> usr/sbin
+drwxr-xr-x   2 root wheel  512 Oct  9 17:28 srv
+drwxr-xr-x   2 root wheel  512 Oct  9 17:28 sys
+drwxr-xr-x   8 root wheel  512 Oct  9 17:28 usr
+drwxr-xr-x  16 root wheel  512 Oct  9 17:28 var
+....
+
+[[linuxemu-centos]]
 === CentOS Base System from FreeBSD Packages
+
+[WARNING]
+====
+package:emulators/linux_base-c7[] has been deprecated following the deprecation of the upstream project.
+This means package:emulators/linux_base-c7[] will not receive security updates.
+The use of crossref:linuxemu[linuxemu-rockylinux, the Rocky Linux Base System]
+is recommended unless 32-bit compatibility is needed.
+====
 
 To install the CentOS userland execute the following command:
 
