committers-guide: apply markup to sample bad commit message
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2412,7 +2412,7 @@ This section contains some suggestions and traditions for how commit logs are fo
 === Why are commit messages important?
 
 When you commit a change in Git, Subversion, or another version control system (VCS), you're prompted to write some text describing the commit -- a commit message.
-How important is this commit message? Should you spend some significant effort writing it? Does it really matter if you write simply fixed a bug?
+How important is this commit message? Should you spend some significant effort writing it? Does it really matter if you write simply `fixed a bug`?
 
 Most projects have more than one developer and last for some length of time.
 Commit messages are a very important method of communicating with other developers, in the present and for the future.
