developers-handbook: mention Lua and flua
Reviewed by:	imp, bapt
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D45281

--- a/documentation/content/en/books/developers-handbook/tools/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/tools/_index.adoc
@@ -148,6 +148,13 @@ It is an excellent tool to work with when teaching programming to smaller age gr
 +
 The latest version of Logo for FreeBSD is available from the Ports Collection in package:lang/logo[].
 
+Lua::
+Lua is a lightweight embeddable scripting language.
+It is widely portable and relatively simple.
+Lua is available in the Ports Collection in package:lang/lua[].
+It is also included in the base system as [.filename]#/usr/libexec/flua# for use by base system components.
+Third party software should not depend on [.filename]#flua#.
+
 Python::
 Python is an Object-Oriented, interpreted language.
 Its advocates argue that it is one of the best languages to start programming with, since it is relatively easy to start with, but is not limited in comparison to other popular interpreted languages that are used for the development of large, complex applications (Perl and Tcl are two other languages that are popular for such tasks).
