--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -122,9 +122,17 @@ gitref:538994626b9f[repository=src], gitref:37dc394170a5[repository=src], gitref
 [[userland-programs]]
 === Userland Application Changes
 
+The man:adduser[8] utility, used by man:bsdinstall[8], will now create a ZFS dataset for a new user's home directory if the parent directory resides on a ZFS dataset.
+A command-line option is available to disable use of a separate dataset.
+ZFS encryption is also available.
+gitref:516009ce8d38[repository=src]
+
 The man:date[1] program now supports nanoseconds.
 For example: `date -Ins` prints "2024-04-22T12:20:28,763742224+02:00" and `date +%N` prints "415050400".
 gitref:eeb04a736cb9[repository=src]
+
+The man:dtrace[1] utility can now generate machine-readable output in JSON, XML, and HTML using man:libxo[3].
+gitref:aef4504139a4[repository=src] (Sponsored by Innovate UK)
 
 The man:lastcomm[1] utility now displays timestamps with a precision of seconds.
 gitref:692c0a2e80c1[repository=src] (Sponsored by DSS Gmbh)
@@ -151,6 +159,9 @@ gitref:daf917daba9c[repository=src]
 
 Clang/LLVM have been upgraded to version 18.1.5.
 gitref:90a5e985e5f4[repository=src]
+
+The man:libarchive[3] library has been upgraded to version 3.7.4.
+gitref:8774c92e32b2[repository=src]
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -209,9 +220,20 @@ This section covers changes and additions to file systems and other storage subs
 [[storage-nfs]]
 === NFS
 
+The man:mountd[8] server has been modified to use man:strunvis[3] to decode directory names in man:exports[5] file(s).
+This allows special characters, such as blanks, to be embedded in the directory name.
+`vis -M` may be used to encode such directory names; see man:vis[1].
+gitref:2c83f1ada435[repository=src]
+
 New man:sysctl[8] variables have been added under `kern.rpc.unenc` and `kern.rpc.tls`, which allow an NFS server administrator to determine how much NFS-over-TLS is being used.
-A large number of failed handshakes might indicate an NFS confirguration problem.
+A large number of failed handshakes might indicate an NFS configuration problem.
 gitref:b8e137d8d32d[repository=src]
+
+[[storage-ufs]]
+=== UFS
+
+Soft updates are now enabled by default when creating a new UFS file system with man:newfs[8].
+gitref:6b2af2d88ffd[repository=src]
 
 [[storage-zfs]]
 === ZFS
@@ -226,6 +248,28 @@ This section covers the boot loader, boot menu, and other boot-related changes.
 
 [[boot-loader]]
 === Boot Loader Changes
+
+The man:loader[8] now reads local configuration files listed in the variable `local_loader_conf_files` after other configuration files, defaulting to [.filename]#/boot/loader.conf.local#.
+gitref:a25531db0fc2[repository=src]
+
+The man:loader[8] can now be configured to read specific configuration files based on the planar maker, planar product, system product and uboot m_product variables from the SMBIOS.
+For the moment, the best documentation is the git commit message,
+gitref:3eb3a802a31b[repository=src].
+
+Console detection in man:loader[8] has been improved on EFI systems.
+If there is no ConOut variable, ConIn is checked.
+If multiple devices are found, serial is preferred.
+gitref:20a6f4779ac6[repository=src] (Sponsored by Netflix)
+
+Frame buffer support in man:loader[8] can now use a text-only video driver, resulting in space savings.
+gitref:57ca2848c0aa[repository=src] (Sponsored by Netflix)
+
+The detection of ACPI is now done earlier in man:loader.efi[8] on arm64 systems.
+The copy of [.filename]#loader.efi# on the EFI partition should be updated on arm64 systems using ACPI.
+gitref:05cf4dda599a[repository=src] gitref:16c09de80135[repository=src]
+
+The LinuxBoot loader can be used to boot FreeBSD from Linux on aarch64 systems as well as amd64.
+gitref:46010641267[repository=src] (Sponsored by Netflix)
 
 [[network]]
 == Networking
@@ -263,3 +307,29 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
+
+FreeBSD 15.0 is not expected to include support for 32-bit platforms other than armv7.
+The armv6, i386, and powerpc platforms are deprecated and will be removed.
+64-bit systems will still be able to run older 32-bit binaries.
+
+We expect to support armv7 as a Tier 2 architecture in FreeBSD 15.0 and stable/15.
+However, we also anticipate that armv7 may be removed in FreeBSD 16.0.
+We will provide an update on the status of armv7 for both 15.x and 16.x at the time of 15.0 release.
+
+Support for executing 32-bit binaries on 64-bit platforms via the `COMPAT_FREEBSD32` option will continue for at least the stable/15 and stable/16 branches.
+Support for compiling individual 32-bit applications via `cc -m32` will also continue for at least the stable/15 branch, which includes suitable headers in [.filename]#/usr/include# and libraries in [.filename]#/usr/lib32#.
+
+Ports will not include support for deprecated 32-bit platforms for FreeBSD 15.0 and later releases.
+These future releases will not include binary packages or support for building packages from ports for deprecated 32-bit platforms.
+
+The FreeBSD stable/14 and earlier branches will retain existing 32-bit kernel and world support.
+Ports will retain existing support for building ports and packages for 32-bit systems on stable/14 and earlier branches as long as those branches are supported by the ports system.
+However, all 32-bit platforms are Tier-2 or Tier-3, and support for individual ports should be expected to degrade as upstreams deprecate 32-bit platforms.
+
+With the current support schedule, stable/14 will reach end of life (EOL) 5 years after the release of FreeBSD {releasePrev}.
+The EOL of stable/14 will mark the end of support for deprecated 32-bit platforms, including source releases, pre-built packages, and support for building applications from ports.
+With the release of {releasePrev} in November 2023, support for deprecated 32-bit platforms will end in November 2028.
+
+The project may choose to alter this approach when FreeBSD 15.0 is released by extending some level of support for one or more of the deprecated platforms in 15.0 or later.
+Any alterations will be driven by community feedback and committed efforts to support these platforms.
+Use FreeBSD {releasePrev} and following minor releases, or the stable/14 branch, to migrate off 32-bit platforms.
