developers-handbook: Remove reference to old FreeBSD version
FreeBSD 10's EOL was long enough ago that we don't need to mention a
specific version that switched from GCC to Clang; simply state that
Clang is cc.

Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/books/developers-handbook/tools/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/tools/_index.adoc
@@ -191,7 +191,7 @@ Using Emacs as an IDE is discussed in <<emacs>>.
 == Compiling with `cc`
 
 This section deals with the clang compiler for C and C++, as it's installed with the FreeBSD base system.
-Starting with FreeBSD 10.X `clang` is installed as `cc`; the GNU compiler package:lang/gcc[gcc] is available in the Ports Collection.
+Clang is installed as `cc`; the GNU compiler package:lang/gcc[gcc] is available in the Ports Collection.
 The details of producing a program with an interpreter vary considerably between interpreters, and are usually well covered in the documentation and on-line help for the interpreter.
 
 Once you have written your masterpiece, the next step is to convert it into something that will (hopefully!) run on FreeBSD.
