[hb][security]: Fix MIT kdc command
Fix kdc command in code snippet.

PR:			278640
Reported by:		Jürgen Weber <weberbug@gmx.de>
Differential Revision:	https://reviews.freebsd.org/D45255

--- a/documentation/content/en/books/handbook/security/_index.adoc
+++ b/documentation/content/en/books/handbook/security/_index.adoc
@@ -1478,7 +1478,7 @@ When using MIT Kerberos as a KDC on FreeBSD, execute the following commands to a
 
 [source,shell]
 ....
-# sysrc kdc_program="/usr/local/sbin/kdc"
+# sysrc kdc_program="/usr/local/sbin/krb5kdc"
 # sysrc kadmind_program="/usr/local/sbin/kadmind"
 # sysrc kdc_flags=""
 # sysrc kdc_enable="YES"
