rc services: add docs for automatic service jails (new in 15-current) Reviewed by:	bcr, fernape Differential Revision:	https://reviews.freebsd.org/D42779

--- a/documentation/content/en/articles/rc-scripting/_index.adoc
+++ b/documentation/content/en/articles/rc-scripting/_index.adoc
@@ -831,6 +831,81 @@ That is, arguments with embedded whitespace may not be processed correctly.
 The bug stems from `$*` misuse.
 ====
 
+[[rcng-service-jails]]
+== Making a script ready for Service Jails
+
+Scripts which start a long running service are suitable for service jails, and should come with a suitable service jail configuration.
+
+Some examples of scripts which are not suitable to run in a service jail:
+
+* any script which in the start command only changes a runtime setting for programs or the kernel,
+* or tries to mount something,
+* or finds and deletes files
+
+Scripts not suitable to run in a service jail need to prevent the use within service jails.
+
+A script with a long running service which needs to do something listed above before the start or after the stop, can either be split-up into two scripts with dependencies, or use the precommand and postcommand parts of the script to perform this action.
+
+By default, only the start and stop parts of a script are run within a service jail, the rest is run outside the jail.
+As such any setting used in the start/stop parts of the script can not be set from e.g. a precommand.
+
+To make a script ready for use with extref:../../books/handbook/jails/#service-jails[Service Jails], only one more config line needs to be inserted:
+
+[.programlisting]
+....
+#!/bin/sh
+
+. /etc/rc.subr
+
+name="dummy"
+start_cmd="${name}_start"
+stop_cmd=":"
+
+: ${dummy_svcj_options:=""} <.>
+
+dummy_start()
+{
+        echo "Nothing started."
+}
+
+load_rc_config $name
+run_rc_command "$1"
+....
+
+&#10122; If it makes sense that the script runs in a jail, it must have an overridable service jails configuration.
+If it does not need network access or access to any other resource which is restricted in jails, an empty config like displayed is enough.
+
+Strictly speaking an empty config is not needed, but it explicitly describes that the script is service jails ready, and that it does not need additional jail permissions.
+As such it is highly recommended to add such an empty config in such a case.
+The most common option to use is "net_basic", which enables the use of the hosts IPv4 and IPv6 addresses.
+All possible options are explained in man:rc.conf[5].
+
+If a setting for the start/stop depends on variables from the rc-framework (e.g. set inside man:rc.conf[5]), this needs to be handled by ``load_rc_config`` and ``run_rc_command`` instead of inside a precommand.
+
+If for some reason a script can not be run within a service jail, e.g. because it is not possible to run or it does not make sense to run it in a jail, use the following:
+
+[.programlisting]
+.... 
+#!/bin/sh
+
+. /etc/rc.subr 
+
+name="dummy"
+start_cmd="${name}_start"
+stop_cmd=":"
+
+dummy_start()
+{
+        echo "Nothing started."
+}
+
+load_rc_config $name
+dummy_svcj="NO"		# does not make sense to run in a svcj <.>
+run_rc_command "$1"
+....
+
+&#10122; The disabling needs to happen after the ``load_rc_config`` call, else a man:rc.conf[5] setting may override it.
+
 [[rcng-furthur]]
 == Further reading
 
