--- a/documentation/content/en/books/handbook/config/_index.adoc
+++ b/documentation/content/en/books/handbook/config/_index.adoc
@@ -434,6 +434,8 @@ For instance, to start package:www/nginx[] regardless of the current [.filename]
 ....
 ====
 
+It is also possible to put a service automatically into a jail, see the corresponding crossref:jails[service-jails,Service Jails] explanation.
+
 [[configtuning-status-services]]
 === Status of a Service
 
