--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -137,6 +137,30 @@ Disadvantages of Thin Jails:
 * Dependency Conflicts: If multiple thin jails require different versions of the same libraries or software, managing dependencies can become complex. In some cases, this might require additional effort to ensure compatibility.
 * Compatibility Challenges: Applications within a thin jail might encounter compatibility issues if they assume a certain base system environment that differs from the shared components provided by the template.
 
+[[service-jails]]
+=== Service Jails
+
+A service jail shares the complete filesystem tree directly with the host (the jail root path is [.filename]#/#) and as such can access and modify any file on the host, and shares the same user accounts with the host.
+By default it has no access to the network or other resources which are restricted in jails, but they can be configured to re-use the network of the host and to remove some of the jail-restrictions.
+The use case for service jails is automatic confinement of services/daemons inside a jail with minimal configuration, and without any knowledge of the files needed by such service/daemon.
+Service jails exist since FreeBSD 15.
+
+Advantages of Service Jails:
+
+* Zero Administration: A service jail ready service needs only one config line in [.filename]#/etc/rc.conf#, a service which is not service jails ready needs two config lines.
+* Resource Efficiency: Service jails are more resource efficient than thin jails, as they do not need any additional disk space or network resource.
+* Faster Deployment: Creating and launching service jails is generally faster compared to thin jails if only distinct services/daemons shall be jailed and no parallel instances of the same service/daemon is needed.
+* Shared Resources: Service jails share all resources such as libraries and binaries with the host system. This can potentially lead to more efficient disk caching and improved performance for applications within the jail.
+* Process Isolation: Service jails isolate a particular service, it can not see processes which are not a child of the service jail, even if they run within the same user account.
+
+Disadvantages of Service Jails:
+
+* Reduced Isolation: The primary disadvantage of service jails is that they offer no filesystem isolation compared to thick or thin jails.
+* Security Concerns: The reduced isolation in service jails could pose security risks, as a compromise in one jail might have a greater potential to affect everything on the host system.
+
+Most of the configuration of jails which is discussed below is not needed for service jails.
+To understand how jails work, it is recommended to understand those configuration possibilities. The details about what is needed to configure a service jail is in crossref:jails[service-jails-config, Configuring service jails].
+
 [[vnet-jails]]
 === VNET Jails
 
@@ -866,6 +890,49 @@ The Ubuntu environment can be accessed using the following command:
 ....
 
 More information can be found in the chapter crossref:linuxemu[linuxemu,Linux Binary Compatibility].
+
+[[service-jails-config]]
+=== Configuring Service Jails
+
+A service jail is configured completely via [.filename]#/etc/rc.conf# or man:sysrc[8].
+The base system services are service jails ready.
+They contain a config line which enables networking or lift other restrictions of jails.
+Base system services which do not make sense to run inside jails are configured to not be started as a service jail, even if enabled in [.filename]#/etc/rc.conf#.
+Some examples of such a service are services which want to mount or unmount something in the start of stop method, or only configure something like a route, or firewall, or the like.
+
+Third party services may or may not be service jails ready. To check if a service is service jail ready, the following command can be used:
+
+[source,shell]
+....
+# grep _svcj_options /path/to/rc.d/servicename
+....
+
+If there is no output, the service is not service jail ready, or does not need any additional privileges like e.g. network access.
+
+If the service is not service jail ready, and needs network access, it can be made ready by adding the necessary config to [.filename]#/etc/rc.conf#:
+
+[source,shell]
+....
+# sysrc servicename_svcj_options=net_basic
+....
+
+For all possible `_svcj_options` see the man:rc.conf[5] man-page.
+
+To enable a service jail for a given service, the service needs to be stopped and the `servicename_svcj` variable needs to be set to YES.
+To put man:syslogd[8] into a service jail, use the following sequence of commands:
+
+[source,shell]
+....
+# service syslogd stop
+# sysrc syslogd_svcj=YES
+# service syslogd start
+....
+
+If the `servicename_svcj` variable is changed, the service needs to be stopped before it is changed.
+If it is not stopped, the rc framework will not detect the correct state of the service and will not be able to do what is requested.
+
+Service jails are managed only via man:rc.conf[5]/man:sysrc[8] and the man:service[8] command.
+The jail utilities, like man:jls[8] as described in crossref:jails[jail-management,Jail Management] can be used to investigate the operation, but the man:jail[8] command is not supposed to be used to manage them.
 
 [[jail-management]]
 == Jail Management
