books/faq: Fix grammar.
PR:		279220

--- a/documentation/content/en/books/faq/_index.adoc
+++ b/documentation/content/en/books/faq/_index.adoc
@@ -100,7 +100,7 @@ Its adaptability, reliability, and open-source nature make FreeBSD a compelling 
 FreeBSD is a community-driven open-source project with a decentralized structure.
 Its development and maintenance are carried out by a global community of dedicated volunteers, developers, and organizations who collaborate to enhance and expand the operating system.
 
-The key decisions concerning the FreeBSD project, such as the overall direction of the project or who is allowed to add code to the source tree, are made by a elected Core Team of 9 people.
+The key decisions concerning the FreeBSD project, such as the overall direction of the project or who is allowed to add code to the source tree, are made by an elected Core Team of nine people.
 
 This collaborative and community-driven approach has been fundamental to FreeBSD's success and longevity as a reliable and robust UNIX-like operating system.
 
