Update secteam composition.
Approved by:	so

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -151,8 +151,7 @@ The FreeBSD Security Officer Charter describes the duties and responsibilities o
 * {bapt} (Core Team Liaison)
 * {delphij} (Officer Emeritus, Release Engineering Team Liaison)
 * {des} (Officer Emeritus)
-* {gjb} (Cluster Administrators Team Liaison)
-* {emaste} (Officer Deputy)
+* {emaste} (Deputy Officer)
 * {markj}
 * {oshogbo}
 * {philip}
